--- a/index.html
+++ b/index.html
@@ -105,3 +105,5 @@ if __name__ == "__main__":
 # Code Update 1760850704-11861
 
 # Code Update 1760850704-30474
+
+# Additional Implementation 1760850704
