--- a/index.html
+++ b/index.html
@@ -63,3 +63,5 @@ if __name__ == "__main__":
 # Code Update 1760850701-23729
 
 # Additional Implementation 1760850702
+
+# Additional Implementation 1760850702
