--- a/index.html
+++ b/index.html
@@ -155,3 +155,5 @@ if __name__ == "__main__":
 # Additional Implementation 1760850706
 
 # Code Update 1760850706-8773
+
+# Additional Implementation 1760850707
