--- a/index.html
+++ b/index.html
@@ -161,3 +161,5 @@ if __name__ == "__main__":
 # Additional Implementation 1760850707
 
 # Code Update 1760850707-8146
+
+# Code Update 1760850707-10033
