--- a/index.html
+++ b/index.html
@@ -93,3 +93,5 @@ if __name__ == "__main__":
 # Code Update 1760850703-1506
 
 # Additional Implementation 1760850703
+
+# Additional Implementation 1760850703
