--- a/index.html
+++ b/index.html
@@ -117,3 +117,5 @@ if __name__ == "__main__":
 # Code Update 1760850704-23981
 
 # Additional Implementation 1760850705
+
+# Code Update 1760850705-12637
