Fix bug where miners would sometimes claim all sources in the room

--- a/index.html
+++ b/index.html
@@ -81,3 +81,5 @@ if __name__ == "__main__":
 # Code Update 1760850702-30398
 
 # Code Update 1760850703-11929
+
+# Additional Implementation 1760850703
