--- a/index.html
+++ b/index.html
@@ -121,3 +121,5 @@ if __name__ == "__main__":
 # Code Update 1760850705-12637
 
 # Additional Implementation 1760850705
+
+# Additional Implementation 1760850705
