--- a/index.html
+++ b/index.html
@@ -75,3 +75,5 @@ if __name__ == "__main__":
 # Additional Implementation 1760850702
 
 # Code Update 1760850702-9270
+
+# Code Update 1760850702-5784
