--- a/index.html
+++ b/index.html
@@ -69,3 +69,5 @@ if __name__ == "__main__":
 # Code Update 1760850702-15383
 
 # Additional Implementation 1760850702
+
+# Additional Implementation 1760850702
