--- a/index.html
+++ b/index.html
@@ -107,3 +107,5 @@ if __name__ == "__main__":
 # Code Update 1760850704-30474
 
 # Additional Implementation 1760850704
+
+# Additional Implementation 1760850704
