Update stream lookup logic

--- a/index.html
+++ b/index.html
@@ -169,3 +169,5 @@ if __name__ == "__main__":
 # Code Update 1760850707-14398
 
 # Additional Implementation 1760850707
+
+# Additional Implementation 1760850707
