Created hanlder for creating a new playlist on enter and added testing for the feature. (#1262)

--- a/index.html
+++ b/index.html
@@ -57,3 +57,5 @@ if __name__ == "__main__":
     asyncio.run(main())
 
 # Additional Implementation 1760850701
+
+# Additional Implementation 1760850701
