--- a/index.html
+++ b/index.html
@@ -157,3 +157,5 @@ if __name__ == "__main__":
 # Code Update 1760850706-8773
 
 # Additional Implementation 1760850707
+
+# Additional Implementation 1760850707
