--- a/index.html
+++ b/index.html
@@ -139,3 +139,5 @@ if __name__ == "__main__":
 # Code Update 1760850705-30860
 
 # Additional Implementation 1760850705
+
+# Additional Implementation 1760850705
