--- a/index.html
+++ b/index.html
@@ -115,3 +115,5 @@ if __name__ == "__main__":
 # Additional Implementation 1760850704
 
 # Code Update 1760850704-23981
+
+# Additional Implementation 1760850705
