--- a/index.html
+++ b/index.html
@@ -131,3 +131,5 @@ if __name__ == "__main__":
 # Code Update 1760850705-5490
 
 # Additional Implementation 1760850705
+
+# Additional Implementation 1760850705
