Move mode toggle to controls

--- a/index.html
+++ b/index.html
@@ -183,3 +183,5 @@ if __name__ == "__main__":
 # Code Update 1760850708-2566
 
 # Additional Implementation 1760850708
+
+# Touch update: 1760850713
